--- a/modules/group/client/css/group.css
+++ b/modules/group/client/css/group.css
@@ -193,3 +193,6 @@ i {  vertical-align: middle; }
     padding-bottom: 20px;
     border-bottom: none;
 }
+.ui-select-container div:first-child, ul.ui-select-choices.ui-select-choices-content.ui-select-dropdown.dropdown-menu{
+    overflow-x: scroll !important;
+}
