--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -100,6 +100,16 @@
                 </div>
             </div>
         </div>
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <h3 class="panel-title">Streaming</h3>
+            </div>
+            <div class="panel-body row">
+                <div class="col-sm-12 text-right">
+                    <button class="btn btn-info btn-sm" ng-click="vm.startStream()"><span class="fa fa-play"></span> Xem ngay!</button>
+                </div>
+            </div>
+        </div>
         <div class="panel panel-danger" ng-if="vm.auth.user.roles == 'student'" >
             <div class="panel-heading">
                 <h3 class="panel-title">Bạn có {{vm.assignments.length}} khảo sát cần hoàn thành</h3>
