--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -135,6 +135,10 @@
         <div class="row" style="padding: 20px">
             <div class="wrapper">
                 <div id="publisher" style="width: 100%;min-height: 253px;"></div>
+            </div>
+        </div>
+        <div class="row" style="padding: 20px">
+            <div class="wrapper">
                 <div id="subscribers" style="width: 100%;min-height: 253px;"></div>
             </div>
         </div>
