--- a/modules/group/client/views/group.client.view.html
+++ b/modules/group/client/views/group.client.view.html
@@ -133,13 +133,11 @@
     </div>
     <div class="modal-body">
         <div class="row" style="padding: 20px">
-            <div class="wrapper">
-                <div id="publisher" style="width: 100%;min-height: 253px;"></div>
+            <div class="wrapper col-sm-6 col-xs-12">
+                <div id="publisher" style="width: 100%;min-height: 253px; height: 350px"></div>
             </div>
-        </div>
-        <div class="row" style="padding: 20px">
-            <div class="wrapper">
-                <div id="subscribers" style="width: 100%;min-height: 253px;"></div>
+            <div class="wrapper col-sm-6 pull-right hidden-xs">
+                <div id="subscribers" style="width: 100%;min-height: 253px; height: 350px"></div>
             </div>
         </div>
     </div>
