--- a/modules/group/client/views/group-documents.client.view.html
+++ b/modules/group/client/views/group-documents.client.view.html
@@ -49,26 +49,29 @@
                 </form>
             </div>
             <ul class="list-group">
-                <li class="list-group-item">
+                <li class="list-group-item" ng-repeat="d in vm.documents">
                     <div class="row">
                         <div class="col-xs-2 col-md-2">
-                            <img src="http://placehold.it/80" class="img-circle img-responsive" alt="" /></div>
+                            <img ng-src="{{d.image}}" class="img-circle img-responsive" alt="" /></div>
                         <div class="col-xs-9 col-md-9">
                             <div>
-                                <a href="http://www.jquery2dotnet.com/2013/10/google-style-login-page-desing-usign.html">
-                                    Google Style Login Page Design Using Bootstrap</a>
+                                <a ng-href="{{d.url}}" target="_blank">
+                                    {{d.name}}</a>
                                 <div class="mic-info">
-                                    By: <a href="#">Bhaumik Patel</a> on 2 Aug 2013
+                                    By: <a href="#">{{d.uploadBy.displayName}}</a> {{d.uploadAt|date:'dd/mm/yyyy HH:mm'}}
                                 </div>
                             </div>
                             <div class="comment-text">
-                                Awesome design
+                                <p ta-bind ng-model="d.desc"></p>
                             </div>
                         </div>
-                        <div class="col-xs-1">
-                            <div class="action">
+                        <div class="col-xs-12">
+                            <div class="action  text-right">
                                 <button type="button" class="btn btn-success btn-xs" title="Download">
-                                    <span class="glyphicon glyphicon-save"></span>
+                                    <a style="color: #fff;" ng-href="{{d.url}}" target="_blank"><span class="glyphicon glyphicon-save"></span></a>
+                                </button>
+                                <button type="button" ng-click="vm.removeDocument(d._id)" class="btn btn-danger btn-xs" title="Delete">
+                                    <span class="glyphicon glyphicon-trash"></span>
                                 </button>
                             </div>
                         </div>
