--- a/modules/group/client/views/group-students.client.view.html
+++ b/modules/group/client/views/group-students.client.view.html
@@ -1,8 +1,8 @@
 <section ng-controller="GroupStudentsController as vm">
     <div class="panel panel-default user_panel">
         <div class="panel-heading" style="height: 40px;">
-            <div class="col-xs-3"><h3 class="panel-title">Học viên</h3></div>
-            <div class="col-xs-9">
+            <div class="col-xs-9"><h3 class="panel-title">Thành viên</h3></div>
+            <div class="col-xs-3">
                 <button style="border: 0; background: none" ng-if="vm.groupInfo.createdBy._id == vm.auth.user._id" ng-click="vm.addStudents()" class="pull-right"><span class="fa fa-plus"></span></button>
             </div>
         </div>
